# anytype-python-client

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml  run_tests.py
anytype_client/: __init__.py  client.py  exceptions.py  models.py
examples/: list_spaces.py
tests/: README.md  __init__.py  conftest.py  test_async_client.py  test_auth_and_spaces.py  test_integration.py  test_lists.py  test_members.py  test_objects.py  test_properties.py  test_search_and_types.py  test_tags.py  test_templates.py
